# lossfunk_assignment

./: .gitignore  README.md  dpo.py  grpo.py  journal.md  lmgt.md  main.py  orpo.py  ppo.py  pyproject.toml  reasoner.md  reinforcement_learning_enhanced_llms.md  report.json  report.md  requirements.txt  reward_comparison_report.json
my_arch/: .env  .env.example  idea.md  main.py  pain_points.md
research_paper_findings/: cooper.md  lmgt.md  reinforcement_learning_enhanced_llms.md  text2reward.md
runs/reward_comparison_20250825_141946/: events.out.tfevents.1756111786.mantis.113119.0
runs/reward_comparison_20250825_142405/: events.out.tfevents.1756112045.mantis.114910.0
runs/reward_comparison_20250825_142629/: events.out.tfevents.1756112189.mantis.115970.0
runs/reward_comparison_20250825_142754/: events.out.tfevents.1756112274.mantis.116743.0
runs/reward_comparison_20250825_174412/: events.out.tfevents.1756124052.mantis.149490.0
runs/reward_comparison_20250825_210125/: events.out.tfevents.1756135885.mantis.175002.0
runs/reward_comparison_20250825_210409/: events.out.tfevents.1756136049.mantis.176279.0
runs/reward_comparison_20250825_211246/: events.out.tfevents.1756136566.mantis.179620.0
runs/reward_comparison_20250825_211451/: events.out.tfevents.1756136691.mantis.181315.0
runs/reward_comparison_20250825_213251/: events.out.tfevents.1756137771.mantis.188248.0
runs/reward_comparison_20250825_223123/: events.out.tfevents.1756141283.mantis.209609.0
training_scripts/: grpo.py  orpo.py  ppo.py  sft_rl.py
(+7 files in other folders)
