[project]
name = "lossfunk-assignment"
version = "0.1.1"
description = "Lossfunk Assignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "cut-cross-entropy>=25.1.1",
    "datasets>=3.6.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.4",
    "matplotlib>=3.10.5",
    "peft>=0.17.1",
    "protobuf>=6.32.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "triton>=3.4.0",
    "trl>=0.21.0",
    "unsloth>=2025.8.9",
    "unsloth-zoo>=2025.8.8",
    "xformers>=0.0.32.post2",
]
